<resources>
    <string name="app_name">AndroidBlackTiger</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="welcome_text">Welcome</string>
    <string name="start_text">Save</string>
    <string name="select_lang">Please select Language</string>
    <string name="default_lang_from">Flag1</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_api_key">  AIzaSyAypiPFKmFfutdEEunf0VcZRs9htVsZpp0</string>
    <string name="hello_blank_fragment">Hello</string>
    <string name="lbl_you_are_at">YOU ARE AT</string>
    <string name="btn_get_location">GET MY LOCATION</string>
    <string name="btn_start_location_updates">START LOCATION UPDATES</string>
    <string name="btn_stop_location_updates">STOP LOCATION UPDATES</string>
    <string name="title_activity_discover_map">Discover Map</string>
    <string-array name="language_options">
        <item>Irish</item>
        <item>French</item>
        <item>Spanish</item>
        <item>Portuguese</item>
        <item>German</item>
        <item>Italian</item>
        <item>Dutch</item>
    </string-array>
    <string name="title_activity_new_vocab">NewVocabActivity</string>
    <string name="EnglishWord">University</string>
    <string name="TranslatedWord">Universidade</string>
    <string name="DoNotShowLocationCheckBox">Do not show this location again.</string>
    <string name="TakePictureButton">Take a picture</string>

    <string name="new_location_notification_title_template">New location: %1$s</string>

    <string name="new_location_notification_placeholder_text_template">You got a new word %1$s nearby. it\'s translation is %2$s.
    </string>
    <string name="showTranslationButton">Translate</string>
    <string name="title_activity_memorable">MemorableActivity</string>

    <!-- KEYS FOR INTENT EXTRAS -->
    <string name="word_intent_word">abt.word_intent.word</string>
    <string name="word_intent_translation">abt.word_intent.translation</string>
    <string name="word_intent_Longitude">abt.word_intent.Longitude</string>
    <string name="word_intent_Latitude">abt.word_intent.Latitude</string>
    <string name="word_intent_image">abt.word_intent.Image</string>
    <string name="word_intent_language">abt.word_intent.Language</string>
    <string name="word_intent_shown">abt.word_intent.Language</string>
    <string name="word_intent_again">abt.word_intent.Language</string>

    <!-- KEYS FOR PREFERENCES -->
    <string name="preference_gps">track_setting</string>
    <string name="preference_name">name_setting</string>
    <string name="preference_language">lang_setting</string>
    <string name="preference_ringtone">pref_tone</string>
    <string name="preference_frequency">freq_setting</string>

    <!-- OTHER THINGS? -->
</resources>
