<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical" >

<ImageView
    android:layout_width="60dp"
    android:layout_height="60dp"
    android:layout_marginTop="60dp"
    android:src="@drawable/mao" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dp"
    android:text="@string/lbl_you_are_at"
    android:textSize="25dp"
    android:textStyle="bold" />

<TextView
    android:id="@+id/lblLocation"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:padding="15dp"
    android:textSize="16dp" />

<Button
    android:id="@+id/btnShowLocation"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:text="@string/btn_get_location"
     />

<Button
    android:id="@+id/btnLocationUpdates"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="60dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:text="@string/btn_start_location_updates"
     />

</LinearLayout>